# ffmpeg-command

./: CMakeLists.txt  README.md
include/: config.h  config.h.in
src/fftools/: command.c
